# recap-data-challenge-se

./: README.md  main.py  main_async.py  perf_test.py  pyproject.toml
app/: api_client.py  api_client_async.py  api_model.py  consumer.py  consumer_async.py  model.py  postprocessor.py  processor.py  processor_async.py  producer.py  producer_async.py
server/: server.py
server/testdata/: page1.json  page10.json  page11.json  page2.json  page3.json  page4.json  page5.json  page6.json  page7.json  page8.json  page9.json
tests/: api_client_mock.py  test_api_client.py  test_consumer.py  test_consumer_async.py  test_postprocessor.py  test_processor.py  test_processor_async.py
