[tool.poetry]
name = "recap-data-challenge-se"
version = "0.1.0"
description = ""
authors = ["svaponi <10941963+svaponi@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dateutil = "^2.9.0.post0"
pydantic = "^2.9.2"
aiohttp = "^3.10.5"
psutil = "^6.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
pytest-asyncio = "^0.24.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
aiofiles = "^24.1.0"
cachetools = "^5.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
